--- a/works.html
+++ b/works.html
@@ -58,17 +58,11 @@
 
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
-                <a href="index.html" class="block py-2 px-4 text-sm flex"><svg xmlns="http://www.w3.org/2000/svg"
-                        class="h-6 w-6 mr-2" fill="none" width="25px" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                    </svg>
-                    <span class="font-bold">Better Dev</span>
-                    <!--         h-6 w-6 mr-1 -->
-                </a>
-                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">About</a>
-                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
-                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Contact</a>
+                
+                <a href="#" class="block py-2 px-4 text-sm text-white">Home</a>
+                <a href="#" class="block py-2 px-4 text-sm text-white">Works</a>
+                <a href="#" class="block py-2 px-4 text-sm text-white">Skills</a>
+                <a href="#" class="block py-2 px-4 text-sm text-white">Contact</a>
             </div>
         </nav>
 
