implement contact form

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
                 <div class="mobile-menu hidden md:hidden">
-                
+
                     <a href="#" class="block py-2 px-4 text-sm text-white">Home</a>
                     <a href="#" class="block py-2 px-4 text-sm text-white">Works</a>
                     <a href="#" class="block py-2 px-4 text-sm text-white">Skills</a>
@@ -69,7 +69,8 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="max-w-screen-xl mt-24 px-8 grid gap-8 grid-cols-1 md:grid-cols-2 md:px-12 lg:px-16 xl:px-32 py-16 mx-auto bg-gray-100 text-gray-900 rounded-lg shadow-lg" style="z-index: 99999;">
+        <div class="max-w-screen-xl mt-24 px-8 grid gap-8 grid-cols-1 md:grid-cols-2 md:px-12 lg:px-16 xl:px-32 py-16 mx-auto bg-gray-100 text-gray-900 rounded-lg shadow-lg"
+            style="z-index: 99999;">
             <div class="flex flex-col justify-between">
                 <div>
                     <h2 class="text-4xl lg:text-5xl font-bold leading-tight">Lets talk about everything!</h2>
@@ -590,7 +591,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="">
+            <form action="https://formspree.io/f/xbjqpdoj" method="POST">
                 <div>
                     <span class="uppercase text-sm text-gray-600 font-bold">Full Name</span>
                     <input
@@ -614,10 +615,11 @@
                         Send Message
                     </button>
                 </div>
-            </div>
+            </form>
         </div>
 
-        <p class="text-slate-300 footer text-center py-16">Made with <span class="text-blue-600">❤</span> by <span class="text-blue-600">Milind Goel</span> </p>
+        <p class="text-slate-300 footer text-center py-16">Made with <span class="text-blue-600">❤</span> by <span
+                class="text-blue-600">Milind Goel</span> </p>
     </div>
 
     <script src="main.js"></script>
