--- a/works.html
+++ b/works.html
@@ -96,7 +96,7 @@
 
                     </a>
 
-                    <a href="#" target="blank">
+                    <a href="https://github.com/milindgoel15/Old-website" target="blank">
 
                         <div
                             class="worksGrid p-8 bg-blue-600 border-transparent rounded-md shadow-md space-y-2 items-start">
@@ -108,7 +108,7 @@
 
                     </a>
 
-                    <a href="#" target="blank">
+                    <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
                         <div
                             class="worksGrid p-8 bg-blue-600 border-transparent rounded-md shadow-md space-y-2 items-start">
