--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="styles/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./Assets/pretty-heroic@1920x1080px.png">
+
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
@@ -59,7 +81,7 @@
 
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
-                
+
                 <a href="#" class="block py-2 px-4 text-sm text-white">Home</a>
                 <a href="#" class="block py-2 px-4 text-sm text-white">Works</a>
                 <a href="#" class="block py-2 px-4 text-sm text-white">Skills</a>
@@ -79,7 +101,8 @@
 
             </a>
 
-            <p class="text-slate-300 footer">Made with <span class="text-blue-600">❤</span> by <span class="text-blue-600">Milind Goel</span> </p>
+            <p class="text-slate-300 footer">Made with <span class="text-blue-600">❤</span> by <span
+                    class="text-blue-600">Milind Goel</span> </p>
         </div>
 
     </div>
