--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
                 <div class="md:flex items-center space-x-4">
                     <!-- logo -->
                     <div>
-                        <a href="index.html" class="flex items-center py-5 px-2">
+                        <a href="index" class="flex items-center py-5 px-2">
                             <!--             any logo -->
                             <span
                                 class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
@@ -50,13 +50,13 @@
 
                 <!-- nav -->
                 <div class="hidden md:flex items-center space-x-4">
-                    <a href="works.html"
+                    <a href="works"
                         class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Works</a>
-                    <a href="skills.html"
+                    <a href="skills"
                         class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Skills</a>
-                    <a href="contact.html"
+                    <a href="contact"
                         class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Contact</a>
-                    <a href="resume.html"
+                    <a href="resume"
                         class="py-2 px-3 text-xl text-blue-600 hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
                 </div>
 
