--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                     <!-- nav -->
                     <div class="hidden md:flex items-center space-x-4">
                         <a href="works"
-                            class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Works</a>
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
                         <a href="skills"
-                            class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Skills</a>
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
                         <a href="contact"
-                            class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Contact</a>
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
                         <a href="resume"
-                            class="py-2 px-3 text-xl text-blue-600 hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
                     </div>
 
                     <!-- mobile button goes here -->
                     <div class="md:hidden flex items-center">
                         <button class="mobile-menu-button">
-                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M4 6h16M4 12h16M4 18h16" />
@@ -80,11 +80,11 @@
 
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
-
-                <a href="#" class="block py-2 px-4 text-sm text-white">Home</a>
-                <a href="#" class="block py-2 px-4 text-sm text-white">Works</a>
-                <a href="#" class="block py-2 px-4 text-sm text-white">Skills</a>
-                <a href="#" class="block py-2 px-4 text-sm text-white">Contact</a>
+                
+                <a href="index" class="block py-2 px-4 text-sm text-white">Home</a>
+                <a href="works" class="block py-2 px-4 text-sm text-white">Works</a>
+                <a href="skills" class="block py-2 px-4 text-sm text-white">Skills</a>
+                <a href="contact" class="block py-2 px-4 text-sm text-white">Contact</a>
             </div>
         </nav>
         <!-- content goes here -->
