--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +31,7 @@
     <meta name="theme-color" content="#ffffff">
 
 </head>
+
 <body>
     <nav>
         <div class="max-w-7xl mx-auto px-8">
@@ -50,19 +52,19 @@
                 <!-- nav -->
                 <div class="hidden md:flex items-center space-x-4">
                     <a href="works"
-                        class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Works</a>
+                        class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
                     <a href="skills"
-                        class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Skills</a>
+                        class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
                     <a href="contact"
-                        class="py-5 px-3 text-xl text-white hover:text-blue-600 transition duration-300">Contact</a>
+                        class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
                     <a href="resume"
-                        class="py-2 px-3 text-xl text-blue-600 hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
+                        class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
                 </div>
 
                 <!-- mobile button goes here -->
                 <div class="md:hidden flex items-center">
                     <button class="mobile-menu-button">
-                        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M4 6h16M4 12h16M4 18h16" />
@@ -75,24 +77,24 @@
 
         <!-- mobile menu -->
         <div class="mobile-menu hidden md:hidden">
-            <div class="mobile-menu hidden md:hidden">
-            
-                <a href="#" class="block py-2 px-4 text-sm text-white">Home</a>
-                <a href="#" class="block py-2 px-4 text-sm text-white">Works</a>
-                <a href="#" class="block py-2 px-4 text-sm text-white">Skills</a>
-                <a href="#" class="block py-2 px-4 text-sm text-white">Contact</a>
-            </div>
+
+            <a href="index" class="block py-2 px-4 text-sm text-white">Home</a>
+            <a href="works" class="block py-2 px-4 text-sm text-white">Works</a>
+            <a href="skills" class="block py-2 px-4 text-sm text-white">Skills</a>
+            <a href="contact" class="block py-2 px-4 text-sm text-white">Contact</a>
         </div>
     </nav>
 
     <div class="py-32 text-center" style="height: 100vh;">
         <h2 class="font-extrabold text-5xl text-white">Coming Soon!</h2>
-        
 
-        <p class="text-slate-300 footer my-96">Made with <span class="text-blue-600">❤</span> by <span class="text-blue-600">Milind Goel</span> </p>
+
+        <p class="text-slate-300 footer my-96">Made with <span class="text-blue-600">❤</span> by <span
+                class="text-blue-600">Milind Goel</span> </p>
     </div>
 
 
 
 </body>
+
 </html>
