custom kursor ftw

--- a/skills.html
+++ b/skills.html
@@ -8,6 +8,7 @@
     <title>Skills</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
     
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -152,6 +153,8 @@
 
     <script src="main.js"></script>
     <script src="snowflakes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
+    <script src="kursor.js"></script>
 </body>
 
 </html>
