--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,8 @@
     <title>My Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles/main.css">
-
+    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
+    
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
@@ -94,7 +95,10 @@
     </div>
 
 
-
+    <script src="main.js"></script>
+    <script src="snowflakes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
+    <script src="kursor.js"></script>
 </body>
 
 </html>
