more subtle anims and alignment

--- a/works.html
+++ b/works.html
@@ -107,6 +107,17 @@
                         </div>
                     </a>
 
+                    <a href="https://github.com/RetroMusicPlayer" target="blank">
+
+                        <div
+                            class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 items-start">
+
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
+                            <p class="text-lg text-slate-200">Member and contributor of Retro Music Player, a material design, offline music player for Android.</p>
+                        </div>
+
+                    </a>
+
                     <a href="http://mwsretail.in" target="blank">
                         <div
                             class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 items-start">
@@ -119,17 +130,7 @@
 
                     </a>
 
-                    <a href="https://github.com/milindgoel15/Old-website" target="blank">
-
-                        <div
-                            class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 items-start">
-
-                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Old Personal Website</h2>
-                            <p class="text-lg text-slate-200">My first website written with plain HTML5 and CSS3</p>
-
-                        </div>
-
-                    </a>
+                    
 
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
