--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                 <div class="grid grid-col-2 grid-rows-2 grid-flow-col gap-10">
                     <a href="http://linkedin.com/in/milindgoel15" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
 
                             <i class="bi bi-linkedin px-3" style="font-size: 3.2rem; color: white"></i>
 
@@ -98,7 +98,7 @@
 
                     <a href="mailto:milindgoel15@gmail.com" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
 
                             <i class="bi bi-envelope-fill px-3" style="font-size: 3.2rem; color: white"></i>
 
@@ -112,7 +112,7 @@
 
                     <a href="http://github.com/milindgoel15" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
 
                             <i class="bi bi-github px-3" style="font-size: 3.2rem; color: white"></i>
 
@@ -126,7 +126,7 @@
 
                     <a href="http://telegram.me/milindgoel15" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-500 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
 
                             <i class="bi bi-telegram px-3" style="font-size: 3.2rem; color: white;"></i>
 
