--- a/skills.html
+++ b/skills.html
@@ -47,8 +47,8 @@
                             class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
                         <a href="contact"
                             class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
-                        <a href="resume"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
+                        <a href="CV.pdf"
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" target="_blank">Resume</a>
                     </div>
 
                     <!-- mobile button goes here -->
