--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <div class="md:flex items-center space-x-4">
                         <!-- logo -->
                         <div>
-                            <a href="index" class="flex items-center py-5 px-2">
+                            <a href="index" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
-                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
+                                    class="font-bold text-black sm:text-white text-2xl hover:text-blue-600 transition duration-300">Milind
                                     Goel</span>
                             </a>
                         </div>
@@ -69,20 +69,21 @@
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
                 
-                <a href="index" class="block py-2 px-4 text-sm text-white">Home</a>
-                <a href="works" class="block py-2 px-4 text-sm text-white">Works</a>
-                <a href="skills" class="block py-2 px-4 text-sm text-white">Skills</a>
-                <a href="contact" class="block py-2 px-4 text-sm text-white">Contact</a>
+                <a href="index" class="block py-2 px-10 text-lg text-white">Home</a>
+                <a href="works" class="block py-2 px-10 text-lg text-white">Works</a>
+                <a href="skills" class="block py-2 px-10 text-lg text-white">Skills</a>
+                <a href="contact" class="block py-2 px-10 text-lg text-white">Contact</a>
+                <a href="CV.pdf" class="block py-2 px-10 text-lg text-white" target="_blank">Resume</a>
             </div>
         </nav>
         <!-- content goes here -->
         <div class="py-32 text-center mainContent">
-            <h2 class="font-extrabold text-8xl text-white">Hi! I'm Milind Goel</h2>
-            <p class="text-xl text-white text-2xl py-8">a Web Developer, UI/UX Designer based in India</p>
+            <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl">Hi! I'm Milind Goel</h2>
+            <p class="text-xl text-white text-xl py-8 md:text-2xl">a Web Developer, UI/UX Designer based in India</p>
 
             <a href="http://github.com/milindgoel15" target="blank">
                 <button
-                    class="text-xl py-7 my-10 px-10 rounded-full bg-white hover:bg-gray-200 button transition duration-300">
+                    class="text-xl py-7 my-10 px-10 rounded-full bg-white hover:bg-gray-200 button transition duration-300 md:text-lg md:py-5 md:px-7 md:my-8">
                     <p class="text-blue-600 transition duration-300">CONNECT WITH ME</p>
                 </button>
 
