--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
                     <div class="md:flex items-center space-x-4">
                         <!-- logo -->
                         <div>
-                            <a href="index" class="flex items-center py-5 px-2">
+                            <a href="index" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
-                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
+                                    class="font-bold text-black sm:text-white text-2xl hover:text-blue-600 transition duration-300">Milind
                                     Goel</span>
                             </a>
                         </div>
@@ -68,11 +68,12 @@
 
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
-                
-                <a href="index" class="block py-2 px-4 text-sm text-white">Home</a>
-                <a href="works" class="block py-2 px-4 text-sm text-white">Works</a>
-                <a href="skills" class="block py-2 px-4 text-sm text-white">Skills</a>
-                <a href="contact" class="block py-2 px-4 text-sm text-white">Contact</a>
+
+                <a href="index" class="block py-2 px-10 text-lg text-black md:text-white">Home</a>
+                <a href="works" class="block py-2 px-10 text-lg text-black md:text-white">Works</a>
+                <a href="skills" class="block py-2 px-10 text-lg text-black md:text-white">Skills</a>
+                <a href="contact" class="block py-2 px-10 text-lg text-black md:text-white">Contact</a>
+                <a href="CV.pdf" class="block py-2 px-10 text-lg text-black md:text-white" target="_blank">Resume</a>
             </div>
         </nav>
 
