--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="container indexContainer">
+    <div class="container indexContainer h-min">
 
         <!-- navbar goes here -->
         <nav>
@@ -68,18 +68,18 @@
 
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
-                
-                <a href="index" class="block py-2 px-10 text-lg text-white">Home</a>
-                <a href="works" class="block py-2 px-10 text-lg text-white">Works</a>
-                <a href="skills" class="block py-2 px-10 text-lg text-white">Skills</a>
-                <a href="contact" class="block py-2 px-10 text-lg text-white">Contact</a>
-                <a href="CV.pdf" class="block py-2 px-10 text-lg text-white" target="_blank">Resume</a>
+
+                <a href="index" class="block py-2 px-10 text-lg text-black md:text-white">Home</a>
+                <a href="works" class="block py-2 px-10 text-lg text-black md:text-white">Works</a>
+                <a href="skills" class="block py-2 px-10 text-lg text-black md:text-white">Skills</a>
+                <a href="contact" class="block py-2 px-10 text-lg text-black md:text-white">Contact</a>
+                <a href="CV.pdf" class="block py-2 px-10 text-lg text-black md:text-white" target="_blank">Resume</a>
             </div>
         </nav>
         <!-- content goes here -->
         <div class="py-32 text-center mainContent">
             <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl">Hi! I'm Milind Goel</h2>
-            <p class="text-xl text-white text-xl py-8 md:text-2xl">a Web Developer, UI/UX Designer based in India</p>
+            <p class="text-xl text-white text-lg py-8 px-3 md:text-2xl">a Web Developer, UI/UX Designer based in India</p>
 
             <a href="http://github.com/milindgoel15" target="blank">
                 <button
@@ -89,7 +89,7 @@
 
             </a>
 
-            <p class="text-slate-300 footer">Made with <span class="text-blue-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-20">Made with <span class="text-blue-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
         </div>
 
