responsive skills page and change bg color

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <!-- mobile button goes here -->
                     <div class="md:hidden flex items-center">
-                        <button class="mobile-menu-button">
+                        <button class="mobile-menu-button text-white">
                             <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -69,11 +69,11 @@
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
 
-                <a href="index" class="block py-2 px-10 text-lg text-black md:text-white">Home</a>
-                <a href="works" class="block py-2 px-10 text-lg text-black md:text-white">Works</a>
-                <a href="skills" class="block py-2 px-10 text-lg text-black md:text-white">Skills</a>
-                <a href="contact" class="block py-2 px-10 text-lg text-black md:text-white">Contact</a>
-                <a href="CV.pdf" class="block py-2 px-10 text-lg text-black md:text-white" target="_blank">Resume</a>
+                <a href="index" class="block py-2 px-10 text-lg text-white">Home</a>
+                <a href="works" class="block py-2 px-10 text-lg text-white">Works</a>
+                <a href="skills" class="block py-2 px-10 text-lg text-white">Skills</a>
+                <a href="contact" class="block py-2 px-10 text-lg text-white">Contact</a>
+                <a href="CV.pdf" class="block py-2 px-10 text-lg text-white" target="_blank">Resume</a>
             </div>
         </nav>
         <!-- content goes here -->
