--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="container skillsContainer">
+    <div class="container skillsContainer h-min">
         <!-- navbar goes here -->
         <nav>
             <div class="max-w-7xl mx-auto px-8">
@@ -33,7 +33,7 @@
                             <a href="index" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
-                                    class="font-bold text-black sm:text-white text-2xl hover:text-blue-600 transition duration-300">Milind
+                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
                                     Goel</span>
                             </a>
                         </div>
@@ -53,7 +53,7 @@
 
                     <!-- mobile button goes here -->
                     <div class="md:hidden flex items-center">
-                        <button class="mobile-menu-button">
+                        <button class="mobile-menu-button text-white">
                             <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -68,21 +68,21 @@
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
 
-                <a href="index" class="block py-2 px-10 text-lg text-black md:text-white">Home</a>
-                <a href="works" class="block py-2 px-10 text-lg text-black md:text-white">Works</a>
-                <a href="skills" class="block py-2 px-10 text-lg text-black md:text-white">Skills</a>
-                <a href="contact" class="block py-2 px-10 text-lg text-black md:text-white">Contact</a>
-                <a href="CV.pdf" class="block py-2 px-10 text-lg text-black md:text-white" target="_blank">Resume</a>
+                <a href="index" class="block py-2 px-10 text-lg text-white">Home</a>
+                <a href="works" class="block py-2 px-10 text-lg text-white">Works</a>
+                <a href="skills" class="block py-2 px-10 text-lg text-white">Skills</a>
+                <a href="contact" class="block py-2 px-10 text-lg text-white">Contact</a>
+                <a href="CV.pdf" class="block py-2 px-10 text-lg text-white" target="_blank">Resume</a>
             </div>
         </nav>
 
         <!-- content goes here -->
         <div class="py-32 text-center">
-            <h2 class="font-extrabold text-4xl text-white">Skills</h2>
+            <h2 class="font-extrabold text-4xl py-1 text-white">Skills</h2>
 
             <div class="flex justify-center min-h-screen">
 
-                <div class="grid grid-col-3 grid-rows-2 grid-flow-col gap-5">
+                <div class="grid grid-rows-5 gap-2 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5">
 
                     <div class="skillsGrid p-8 space-y-2">
 
