--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a href="index" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
-                                    class="font-bold text-black sm:text-white text-2xl hover:text-blue-600 transition duration-300">Milind
+                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
                                     Goel</span>
                             </a>
                         </div>
