--- a/works.html
+++ b/works.html
@@ -33,7 +33,7 @@
                             <a href="index" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
-                                    class="font-bold text-black sm:text-white text-2xl hover:text-blue-600 transition duration-300">Milind
+                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
                                     Goel</span>
                             </a>
                         </div>
@@ -79,7 +79,7 @@
 
         <!-- content goes here -->
         <div class="py-32 text-center">
-            <h2 class="font-extrabold text-2xl py-5 text-black md:text-white md:text-4xl">Recents Works & Contributions</h2>
+            <h2 class="font-extrabold text-2xl py-5 text-white md:text-4xl">Recents Works & Contributions</h2>
 
             <div class="flex justify-center min-h-screen">
 
