--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="container contactContainer">
+    <div class="container contactContainer h-min">
 
         <nav>
             <div class="max-w-7xl mx-auto px-8">
@@ -34,7 +34,7 @@
                             <a href="index" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
-                                    class="font-bold text-black sm:text-white text-2xl hover:text-blue-600 transition duration-300">Milind
+                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
                                     Goel</span>
                             </a>
                         </div>
@@ -78,18 +78,18 @@
         </nav>
 
         <div class="py-32 text-center">
-            <h2 class="font-extrabold text-4xl text-white">Connect with me</h2>
+            <h2 class="font-extrabold text-4xl py-8 text-white">Connect with me</h2>
 
             <div class="flex justify-center">
 
-                <div class="grid grid-col-2 grid-rows-2 grid-flow-col gap-10">
+                <div class="grid grid-rows-4 gap-4 lg:grid-col-2 lg:grid-rows-2 lg:grid-flow-col lg:gap-10">
                     <a href="http://linkedin.com/in/milindgoel15" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem]">
 
-                            <i class="bi bi-linkedin px-3" style="font-size: 3.2rem; color: white"></i>
+                            <i class="bi bi-linkedin px-3" style="font-size: 2.8rem; color: white"></i>
 
-                            <div class="flex flex-col px-9">
+                            <div class="flex flex-col px-5 lg:px-9">
                                 <h2 class="text-2xl py-1 text-white font-semibold leading-6">LinkedIn</h2>
                                 <p class="text-lg text-slate-200">@milindgoel15</p>
 
@@ -99,11 +99,11 @@
 
                     <a href="mailto:milindgoel15@gmail.com" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem]">
 
-                            <i class="bi bi-envelope-fill px-3" style="font-size: 3.2rem; color: white"></i>
+                            <i class="bi bi-envelope-fill px-3" style="font-size: 2.8rem; color: white"></i>
 
-                            <div class="flex flex-col px-9">
+                            <div class="flex flex-col px-5 lg:px-9">
                                 <h2 class="text-2xl py-1 text-white font-semibold leading-6">Email</h2>
                                 <p class="text-lg text-slate-200">milindgoel15@gmail.com</p>
 
@@ -113,11 +113,11 @@
 
                     <a href="http://github.com/milindgoel15" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem]">
 
-                            <i class="bi bi-github px-3" style="font-size: 3.2rem; color: white"></i>
+                            <i class="bi bi-github px-3" style="font-size: 2.8rem; color: white"></i>
 
-                            <div class="flex flex-col px-9">
+                            <div class="flex flex-col px-5 lg:px-9">
                                 <h2 class="text-2xl py-1 text-white font-semibold leading-6">GitHub</h2>
                                 <p class="text-lg text-slate-200">@milindgoel15</p>
 
@@ -127,11 +127,11 @@
 
                     <a href="http://telegram.me/milindgoel15" target="blank">
 
-                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2">
+                        <div class="contactsGrid p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem]">
 
-                            <i class="bi bi-telegram px-3" style="font-size: 3.2rem; color: white;"></i>
+                            <i class="bi bi-telegram px-3" style="font-size: 2.8rem; color: white;"></i>
 
-                            <div class="flex flex-col px-9">
+                            <div class="flex flex-col px-5 lg:px-9">
                                 <h2 class="text-2xl py-1 text-white font-semibold leading-6">Telegram</h2>
                                 <p class="text-lg text-slate-200">@milindgoel15</p>
 
@@ -143,7 +143,7 @@
 
             </div>
 
-            <p class="text-slate-300 footer">Made with <span class="text-blue-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-24">Made with <span class="text-blue-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
         </div>
