--- a/skills.html
+++ b/skills.html
@@ -135,7 +135,7 @@
 
             </div>
 
-            <p class="text-slate-300 footer">Made with <span class="text-blue-600">❤</span> by <span class="text-blue-600">Milind Goel</span> </p>
+            <p class="text-slate-300 footer mt-24">Made with <span class="text-blue-600">❤</span> by <span class="text-blue-600">Milind Goel</span> </p>
         </div>
     </div>
 
