support for responsive button

--- a/works.html
+++ b/works.html
@@ -139,13 +139,9 @@
 
             </div>
 
-
-
-            <button
-                class="text-xl py-7 my-20 px-10 rounded-full bg-white hover:bg-gray-200 button transition duration-300">
-                <a href="https://github.com/milindgoel15" class="text-blue-600 transition duration-300">Other
-                    Contributions</a>
-            </button>
+            <a href="https://github.com/milindgoel15?tab=repositories">
+                <button class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-8 xl:my-20 xl:px-10 xl:py-7 text-xl rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">Other Contributions</button>
+            </a>
 
             <p class="text-slate-300 footer mt-12">Made with <span class="text-blue-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
