center skills page

--- a/skills.html
+++ b/skills.html
@@ -84,7 +84,7 @@
 
             <div class="flex justify-center min-h-screen">
 
-                <div class="grid grid-rows-5 gap-2 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5">
+                <div class="grid grid-rows-5 gap-2 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
 
                     <div class="skillsGrid p-8 space-y-2">
 
